# assistance

./: .env  .gitignore  .pants.bootstrap  .pre-commit-config.yaml  .pylintrc  404.html  AgedCare.html  BUILD  CNAME  CODEOWNERS  Counselling.html  README.md  counselling.html  courses.html  general.html  index.html  package-lock.json  pants.toml  partner-with-us.html  partnerwithus.html  privacy-policy.html  project.json  pyproject.toml  pyproject.toml.bak  pyrightconfig.json  requirements.txt
.cm/: gitstream.cm
assistance/: __init__.py  (+15 more)
src/python/: .gitignore  README.md  app.py  gunicorn_start  main.py  pyproject.toml
src/python/assistance/: BUILD  README.md  __init__.py  __main__.py  _affiliate.py  _cli.py  _collectarticles.py  _completions.py  _config.py  _crontab.py  _ctx.py  _keys.py  _logging.py  _mailgun.py  _passport.py  _paths.py  _streamlit.py  _types.py  _utilities.py  _version.py  cli.py  conversations.py  keys.py  main.py  paths.py  pyproject.toml
src/python/assistance/_/search/: search.py
src/python/assistance/_admin/: app.py  categories.py  getkeys.py  index.py
src/python/assistance/_admin/apps/: __init__.py  affiliate.py  build.py  chat.py  hello.py  stt.py  talking.py  test.py
src/python/assistance/_agents/: avatar.py  conversations.py  custom.py  default.py  discourse_summary.py  enrolment.py  executive_function_system.py  post.py  relevance.py  summaries.py  utilities.py
src/python/assistance/_agents/email/: alphacrucis.py  avatar.py  create.py  custom.py  default.py  googlealerts.py  list.py  post.py  reply.py  restricted.py  types.py
src/python/assistance/_agents/tools/: search.py
src/python/assistance/_api/: keys.py  login.py  mailgun.py  main.py
src/python/assistance/_api/raw/: chat.py
src/python/assistance/_api/routers/: chat.py  contact-us.py  email.py  forms.py  query.py  root.py  save.py  search.py  send.py  stripe.py  summarise.py
src/python/assistance/_apiserver/: mailgun.py
src/python/assistance/_apiserver/api/: exceptions.py  main.py  save.py
src/python/assistance/_apiserver/api/routers/: search.py
src/python/assistance/_apiserver/conversations/: career.py
src/python/assistance/_apiserver/query/: from_transcript.py
src/python/assistance/_apiserver/search/: search.py
src/python/assistance/_apiserver/summary/: with_query.py
src/python/assistance/_avatar/: phirho.py
src/python/assistance/_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
src/python/assistance/_client/apis/: path_to_api.py  tag_to_api.py
src/python/assistance/_client/apis/paths/: __init__.py  chat_student_continue.py  chat_student_start.py  login.py  query_from_transcript.py  save_form.py  search_alphacrucis.py  send_signin_link.py  summarise_with_query_raw.py  summarise_with_query_url.py  temp_account.py
src/python/assistance/_client/apis/tags/: __init__.py  default_api.py
src/python/assistance/_client/docs/models/: Data.md  HTTPValidationError.md  SearchData.md  StoreData.md  StudentChatContinueData.md  StudentChatStartData.md  SummariseData.md  SummariseUrlData.md  Token.md  ValidationError.md
src/python/assistance/_client/model/: __init__.py  data.py  data.pyi  http_validation_error.py  http_validation_error.pyi  search_data.py  search_data.pyi  store_data.py  store_data.pyi  student_chat_continue_data.py  student_chat_continue_data.pyi  student_chat_start_data.py  student_chat_start_data.pyi  summarise_data.py  summarise_data.pyi  summarise_url_data.py  summarise_url_data.pyi  token.py  token.pyi  validation_error.py  validation_error.pyi
src/python/assistance/_client/models/: __init__.py
src/python/assistance/_client/paths/: __init__.py
src/python/assistance/_client/paths/chat_student_continue/: __init__.py  post.py  post.pyi
src/python/assistance/_client/paths/chat_student_start/: __init__.py  post.py  post.pyi
src/python/assistance/_client/paths/login/: __init__.py  post.py  post.pyi
src/python/assistance/_email/: thread.py
src/python/assistance/_enrolment/: form.py  response.py
src/python/assistance/_forms/: build.py  passport.py
src/python/assistance/_handlers/: custom.py  default.py
src/python/assistance/_news/: collect.py  pipeline.py  post.py  process.py
src/python/assistance/_store/: emails.py  file.py  search.py  transcript.py
src/python/assistance/_summarisation/: with_tasks.py
src/python/assistance/_tooling/: executive_function_system.py
src/python/assistance/_tools/: search.py
src/python/assistance/_tools/search/: search.py
src/python/assistance/_tools/store/: search.py  transcript.py
src/python/assistance/_tools/summary/: with_query.py
src/python/assistance/_vendor/stackoverflow/: web_scraping.py
src/python/assistance/api/: api.py  chat.py  conversations.py  ctx.py  keys.py  login.py  mailgun.py  main.py  notion.py  paths.py  save.py  search.py  security.py  signup.py  store.py  test.json  utilities.py
src/python/assistance/api/langchain/: student.py  tools.py
src/python/assistance/api/login/: login.py  utilities.py
src/python/assistance/api/routers/: chat.py  query.py  root.py  save.py  search.py  send.py  summarise.py
src/python/assistance/api/search/: ids.py  search.py
src/python/assistance/assistance/: BUILD  notion.py
src/python/assistance/assistance/api/: login.py
src/python/assistance/assistance/conversations/: student.py
src/python/assistance/assistance/store/: search.py
src/python/assistance/conversations/: cache.py  career.py  student.py
src/python/assistance/query/: from_transcript.py
src/python/assistance/search/: course_list.py  search.py
src/python/assistance/store/: file.py  search.py  transcript.py  utilities.py
src/python/assistance/summary/: config.py  summary.py  with_query.py
src/python/assistance/tests/: test_google_alert_parsing.py  test_passport_data_extract.py
src/python/assistancechat/: __main__.py  config.py  main.py
src/python/isacareers/: __main__.py  conversations.py  main.py
src/python/notebooks/: add-data-to-notion.ipynb  download-notion.ipynb
src/python/streamlit/: app.py
(+600 files in other folders)
