[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "assistance"
authors = [
  { name = "Alex Carpenter", email = "alex@refuge.au" },
  { name = "Simon Biggs", email = "simon@refuge.au" },
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = []

[project.urls]
Home = "https://refuge.au"
