[tool.poetry]
name = "assistance"
version = "0.1.1"
description = ""
authors = [
  "Simon Biggs <simon@assistance.chat>",
  "Ken Cheung <ken@assistance.chat>",
  "Alex Carpenter <alex@assistance.chat>"
]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
assistance = "assistance.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"

# For GPT to use
numpy = "*"
scipy = "*"
requests = "*"

thefuzz = {extras = ["speedup"], version = "*"}
openai = "*"
beautifulsoup4 = "*"

aiofiles = "*"
aiohttp = "*"
fastapi = "*"
keyring = "*"
passlib = {extras = ["bcrypt"], version = "*"}
python-jose = {extras = ["cryptography"], version = "*"}
python-multipart = "*"
uvicorn = {extras = ["standard"], version = "*"}

streamlit = ">=1.17.0"
typer = "^0.7.0"
authlib = "^1.2.0"
itsdangerous = "^2.1.2"
httpx = "^0.23.3"
google-auth = "^2.16.0"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
bandit = "*"
black = "*"
docformatter = "*"
flake8 = "*"
ipython = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
pyright = "*"
pytest = "*"
pytest-bandit = "*"
pyupgrade = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
