[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "assistance"
authors = [
  {name = "Simon Biggs", email = "simon@assistance.chat"},
  {name = "Ken Cheung", email = "ken@assistance.chat"},
  {name = "Alex Carpenter", email = "alex@assistance.chat"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = []

[project.urls]
Home = "https://github.com/assistancechat/assistance.chat/tree/main/src/python/assistance"
